"Responsive modifications and iframe added instead of video"

--- a/index.html
+++ b/index.html
@@ -303,7 +303,12 @@
         <div class="project-list">
           <div class="projectelem">
             <div class="card">
-              <video autoplay muted loop src="source/prism.mp4"></video>
+                  <iframe 
+                      src="./source/prism.mp4" 
+                      title="prism website" 
+                      frameborder="0" 
+                      allowfullscreen>
+                  </iframe>
             </div>
             <div class="descriptionDiv">
               <h2>Prism Effect</h2>
@@ -333,13 +338,24 @@
               </p>
             </div>
             <div class="card card2">
-              <video autoplay muted loop src="source/Significo.mp4"></video>
+              <iframe 
+              src="./source/Significo.mp4" 
+              title="Significo" 
+              frameborder="0" 
+              allowfullscreen>
+          </iframe>
             </div>
           </div>
 
           <div class="projectelem">
             <div class="card">
-              <video autoplay muted loop src="source/Duo Studio.mp4"></video>
+              <iframe 
+                    
+              src="./source/Duo Studio.mp4" 
+              title="Duo Studio website" 
+              frameborder="0" 
+              allowfullscreen>
+          </iframe>
             </div>
             <div class="descriptionDiv">
               <h2>Duo Studio Website</h2>
