--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   </head>
-  <body theme="black">
+  <body theme="black" style="font-family: Playfair Display;">
     <div class="loaderPart">
       <div class="loader" id="loader">
         <div></div>
@@ -85,7 +87,7 @@
           <div class="spinner"></div>
           <div class="borderWrapper">
             <img
-              src="source/animegenius_bd6b3f86c5d987e6506d22ef43cbcfe9.png"
+              src="source/Me.jpg"
               alt="Rotating Border Image"
             />
           </div>
@@ -95,7 +97,7 @@
       <div class="about section" id="about">
         <div class="about-img">
           <div class="effectdiv"></div>
-          <img src="source/Citiz.jpg" alt="Rotating Border Image" />
+          <img src="source/Me.jpg" alt="Rotating Border Image" />
         </div>
         <div class="about-text">
           <h2>About <span>Me</span></h2>
