--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <div class="nav section">
         <h1>Portfolio</h1>
 
-        <i class="bx bx-menu"></i>
+        <i id="menu" class="bx bx-menu"></i>
         <div class="side-navbar">
-          <i class="bx bx-window-close"></i>
+          <i id="close" class="bx bx-window-close"></i>
           <a href="#home">Home</a>
           <a href="#about">About</a>
           <a href="#skill">Skills</a>
@@ -44,7 +44,7 @@
           <a href="#contacts">Contacts</a>
         </div>
         <div class="nav-part2">
-          <a class="" href="#home">Home</a>
+          <a  href="#home">Home</a>
           <a href="#about">About</a>
           <a href="#skill">Skills</a>
           <a href="#projects">Projects</a>
@@ -228,9 +228,9 @@
           </div>
         </div>
 
-        <div class="container1">
+        <div class="container1 container2">
           <h1 class="heading1">Professional Skills</h1>
-          <div class="radial-bar">
+          <div class="radial-bar bar1">
             <svg class="circle-bar" viewBox="0 0 200 200">
               <circle class="bg-circle" cx="100" cy="100" r="100"></circle>
               <circle
@@ -246,7 +246,7 @@
               <div class="text">Creativity</div>
             </div>
           </div>
-          <div class="radial-bar">
+          <div class="radial-bar bar2">
             <svg class="circle-bar" viewBox="0 0 200 200">
               <circle class="bg-circle" cx="100" cy="100" r="100"></circle>
               <circle
@@ -262,7 +262,7 @@
               <div class="text">Communication</div>
             </div>
           </div>
-          <div class="radial-bar">
+          <div class="radial-bar bar3">
             <svg class="circle-bar" viewBox="0 0 200 200">
               <circle class="bg-circle" cx="100" cy="100" r="100"></circle>
               <circle
@@ -278,7 +278,7 @@
               <div class="text">Problem Solving</div>
             </div>
           </div>
-          <div class="radial-bar">
+          <div class="radial-bar bar4">
             <svg class="circle-bar" viewBox="0 0 200 200">
               <circle class="bg-circle" cx="100" cy="100" r="100"></circle>
               <circle
@@ -299,7 +299,7 @@
 
       <div class="projects" id="projects">
         <h1><span>{</span>Latest Works<span>}</span></h1>
-        <div class="project-list">
+        <div class="project-list list1">
           <div class="projectelem">
             <div class="card">
                   <iframe 
@@ -328,7 +328,7 @@
           <div class="projectelem">
             <div class="descriptionDiv">
               <h2>Significo</h2>
-              <p>
+              <p id="card2p">
                 Created a clone of the Significo website to showcase my skills
                 in HTML, CSS, and JavaScript. This project demonstrates
                 attention to design details, smooth animations, and a solid
@@ -357,7 +357,7 @@
           </iframe>
             </div>
             <div class="descriptionDiv">
-              <h2>Duo Studio Website</h2>
+              <h2>Duo Studio</h2>
               <p>
                 Duo Studio website using GSAP and Locomotive Scroll, featuring
                 smooth scrolling effects and cool animations. This project
